tests/src/frontend/syntax/invalid/match_before_expression.sk
fun main(): String {
  _ = match 1 {
    | 1 -> 2
    | 2 -> 3
    | _ -> 4
  };
  "Hello Skip!\n"
}
